# Euphron

./: .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
src/: main.cpp
src/api/controllers/: engine_controller.cpp  engine_controller.hpp
src/api/routes/: command_route.cpp  command_route.hpp
src/console/: console.cpp  console.hpp
src/engine/: CMakeLists.txt  engine.cpp  engine.hpp
src/engine/evaluation/: evaluation.cpp  evaluation.hpp  piece_values.hpp
src/engine/search/: mvv_lva.cpp  mvv_lva.hpp  quiescence.cpp  quiescence.hpp  search.cpp  search.hpp
src/engine/src/: cmd_parser.cpp  cmd_parser.hpp  commands.hpp  engine.cpp  engine.hpp  infos.hpp  main.cpp  parser.cpp  parser.hpp  uci.cpp  uci.hpp  uci_parser.hpp
src/engine/src/api/routes/: command_route.hpp
src/engine/src/evaluation/: evaluation.cpp  evaluation.hpp  piece_values.hpp
src/engine/src/search/: search.cpp  search.hpp
src/io/: engine_io.hpp  http_io.cpp  http_io.hpp  uci_io.cpp  uci_io.hpp
src/uci/: uci.cpp  uci.hpp  uci_commands.hpp
src/uci/commands/: get_infos.cpp  get_infos.hpp  go.cpp  go.hpp  go_options.hpp  is_ready.cpp  is_ready.hpp  new_game.cpp  new_game.hpp  position.cpp  position.hpp  position_options.hpp  quit.cpp  quit.hpp  stop.cpp  stop.hpp
src/uci/parsing/: cmd_parser.cpp  cmd_parser.hpp  uci_parser.cpp
